# job-agent-v3

./: .env.example  .gitignore  .mcp.json  AUDIT.md  BACKLOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: build-storybank.md  coach-drill.md  coach-hype.md  coach-kickoff.md  coach-prep.md  coaching-session.md  compact.md  content-session.md  find-jobs.md  job-search-session.md  linkedin-session.md  queue-digest.md  reset.md  score-job.md  setup.md  tailor-docs.md  track-application.md  try-it.md  watch-company.md
.github/workflows/: ats_poll.yml  collect_feedback.yml  job_digest.yml  prepare_selected.yml  prepare_single.yml  profile_setup.yml  test.yml
config/: profile.yaml.example
config/templates/: digest_email.html
docs/: EMAIL_TIER.md  demo.html  walkthrough.md
src/: ats_poller.py  bootstrap.py  coach_bridge.py  digest.py  feedback.py  file_writer.py  ingestor.py  models.py  preparer.py  profile.py  scout.py  utils.py
src/hooks/: check_coaching_state.py  session_log.py  validate_yaml.py
src/migrations/: v1_to_v2.py
tests/: test_ats_poller.py  test_bootstrap.py  test_coach_bridge.py  test_digest.py  test_feedback.py  test_file_writer.py  test_hooks.py  test_ingestor.py  test_models.py  test_preparer.py  test_profile.py  test_scout.py  test_selection.py  test_utils.py
tests/evals/: conftest.py  test_fabrication_detection.py  test_profile_schema.py  test_score_output.py
tests/evals/fixtures/: complete_profile.yaml  processed_listings.yaml
tests/fixtures/: sample_coaching_state.md
